# moleculardynamics

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
milestones/: CMakeLists.txt
milestones/01/: main.cpp
milestones/04/: CMakeLists.txt  main.cpp
milestones/05/: CMakeLists.txt  main.cpp
milestones/06/: CMakeLists.txt  main.cpp
milestones/07/: CMakeLists.txt  cluster_10179.xyz  cluster_147_0.xyz  cluster_2057_0.xyz  cluster_309_0.xyz  cluster_5083_0.xyz  cluster_561.xyz  equilibrate.sh  heat_cap.sh  main.cpp
milestones/08/: CMakeLists.txt  cluster_3871_transformed.xyz  cluster_5083_transformed.xyz  cluster_923_5000_0.xyz  experiments_no_thermo.sh  experiments_thermo.sh  main.cpp
milestones/09/: CMakeLists.txt  experiments_large.sh  experiments_small.sh  main.cpp
report/milestone04/: derivation.md
report/milestone06/: simtime.sh
report/milestone07/mackay/: script.sh
report/tools/: plot_e_t.py  plot_e_t_v2.py  plot_total_energy.py
src/: CMakeLists.txt  atoms.h  berendsen.cpp  berendsen.h  cubic_lattice.cpp  cubic_lattice.h  domain.cpp  ducastelle.cpp  ducastelle.h  hello.h  kinetic.cpp  kinetic.h  lj.cpp  lj.h  lj_direct_summation.cpp  lj_direct_summation.h  neighbors.cpp  temperature.cpp  temperature.h  types.h  verlet.cpp  verlet.h  virial.cpp  virial.h  volume.cpp  volume.h  xyz.cpp
tests/: CMakeLists.txt  test_berendsen.cpp  test_kinetic.cpp  test_lj_direct_summation.cpp  test_neighbors.cpp  test_temperature.cpp  test_verlet.cpp  test_virial.cpp
